--- a/이것이_코딩_테스트다/부록A_파이썬_문법_자료형.ipynb
+++ b/이것이_코딩_테스트다/부록A_파이썬_문법_자료형.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "094e68de",
+   "id": "8f549df3",
    "metadata": {},
    "source": [
     "# 자료형\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fea2cae3",
+   "id": "9186f019",
    "metadata": {},
    "source": [
     "### 수 자료형\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4769cb32",
+   "id": "a7b27afd",
    "metadata": {},
    "source": [
     "#### 정수형\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "cb3a7ebf",
+   "id": "35d3ebf0",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76fcd0a5",
+   "id": "86d8e600",
    "metadata": {},
    "source": [
     "#### 실수형\n",
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9b742eed",
+   "id": "c576f12f",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5844fe3f",
+   "id": "981a5a53",
    "metadata": {},
    "source": [
     "#### 지수 표현 방식\n",
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "d03d08a7",
+   "id": "c3f11d38",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a9cca14",
+   "id": "8782a74b",
    "metadata": {},
    "source": [
     "#### 부동 소수점(Floating-point)\n",
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "2f151292",
+   "id": "480dd12b",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "faee882e",
+   "id": "c329d5d0",
    "metadata": {},
    "source": [
     "<b>0.3과 0.6을 더했지만 0.9가 아닌것을 확인 할 수있다.</b>\n",
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "825440b6",
+   "id": "2004086b",
    "metadata": {
     "scrolled": true
    },
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb467381",
+   "id": "4416bb3f",
    "metadata": {},
    "source": [
     "#### 수 자료형의 연산"
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03bac4b9",
+   "id": "0298e46e",
    "metadata": {},
    "source": [
     "파이썬의 나누기 연산자(/)는 결과를 실수형으로 처리한다.<br>\n",
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "fb18c6b3",
+   "id": "becf713d",
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8b139f0",
+   "id": "3a34644b",
    "metadata": {},
    "source": [
     "### 리스트 자료형<br>\n",
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "642dbabb",
+   "id": "e81ff09a",
    "metadata": {},
    "source": [
     "#### 리스트 만들기\n",
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "93a1ab10",
+   "id": "40c4ba29",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "094fa8ca",
+   "id": "1cd07292",
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de525443",
+   "id": "6fa67e19",
    "metadata": {},
    "source": [
     "#### 리스트의 인덱싱과 슬라이싱\n",
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "c96a298f",
+   "id": "58fc3ca7",
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7afd255",
+   "id": "96ad15af",
    "metadata": {},
    "source": [
     "#### 리스트 컴프리헨션\n",
@@ -411,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "135c75f5",
+   "id": "7e5b7a72",
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "dd15d6dc",
+   "id": "538b1b01",
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d2595af",
+   "id": "b8ceb6b7",
    "metadata": {},
    "source": [
     "###### sandbox! : 둘의 시간을 비교해보자!"
@@ -463,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "f0f526df",
+   "id": "414dcaa0",
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "73b54e61",
+   "id": "f78faa7d",
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "f3c9718d",
+   "id": "7a3314de",
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "496d4ad6",
+   "id": "6628ee67",
    "metadata": {},
    "source": [
     "list comprehension이 더 빠른것을 확인 할 수 있다."
@@ -558,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "730e3bef",
+   "id": "08a3170f",
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba592d2e",
+   "id": "28ad6490",
    "metadata": {},
    "source": [
     "N $\\times$ M 크기의 2차원을 초기화 할때"
@@ -586,7 +586,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "a7824297",
+   "id": "8cc86d3a",
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7486cac6",
+   "id": "69b2cd4f",
    "metadata": {},
    "source": [
     "특정크기의 2차원 리스트를 초기화 하기 위해서는 반드시 리스트 컴프리헨션을 이용해야한다.<br>\n",
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "34784ae6",
+   "id": "c1c0536e",
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b9b6cb1",
+   "id": "ed55684e",
    "metadata": {},
    "source": [
     "무엇이 문제냐면, 나는 array[1][1] = 5를 통해 [1][1]만 5로 바꿔주고 싶었던건데,<br>\n",
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ca62321",
+   "id": "61934d6e",
    "metadata": {},
    "source": [
     "---\n",
@@ -665,7 +665,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "1596128a",
+   "id": "811f552e",
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "250974d7",
+   "id": "b4c05ff9",
    "metadata": {
     "scrolled": true
    },
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aed21abe",
+   "id": "9e191a14",
    "metadata": {},
    "source": [
     "---"
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ad29a2a",
+   "id": "85cadc0d",
    "metadata": {},
    "source": [
     "#### 리스트 관련 기타 메서드"
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75f60701",
+   "id": "290b5fe6",
    "metadata": {},
    "source": [
     "<table width = '100%' border =\"1\" align = 'center'>\n",
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "5f816f92",
+   "id": "723efaab",
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb24b620",
+   "id": "5131771e",
    "metadata": {},
    "source": [
     "---\n",
@@ -851,7 +851,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "401a0417",
+   "id": "483c32fc",
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba4631ac",
+   "id": "b45a0974",
    "metadata": {},
    "source": [
     "앞에 있는 순서대로 없어지는걸 확인할 수 있다!\n",
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78e3e1ee",
+   "id": "6655d5dd",
    "metadata": {},
    "source": [
     "<b>insert</b><br>\n",
@@ -896,7 +896,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "7582a901",
+   "id": "4df0b21b",
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cee0657",
+   "id": "951ce427",
    "metadata": {},
    "source": [
     "**해설<br>\n",
@@ -931,81 +931,491 @@
   },
   {
    "cell_type": "markdown",
-   "id": "243a9890",
+   "id": "ceff4862",
    "metadata": {},
    "source": [
     "### 문자열 자료형"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5c767f98",
+   "cell_type": "markdown",
+   "id": "7af5adba",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ec00e9d1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "565f909e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a9fab4b2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d3e64769",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "78a666d4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e72abc5d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "09b3e841",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### 문자열 초기화"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "f2fc8203",
+   "id": "f611faf8",
    "metadata": {},
-   "source": []
+   "source": [
+    "문자열 자료를 초기화 할때는 따옴표를 이용하도록 한다! (\" \" , ' ')<br>\n",
+    "문자열 안에 있는 따옴표와 중복되지 않도록만 조심하자. \\ 를 통해 문자열 안에 따옴표를 넣을 수 있다!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "33dda5cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n",
+      "Don't you know \"Python\"?\n"
+     ]
+    }
+   ],
+   "source": [
+    "data ='Hello World'\n",
+    "print(data)\n",
+    "\n",
+    "data = 'Don\\'t you know \"Python\"?'\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6cb4bde",
+   "metadata": {},
+   "source": [
+    "#### 문자열 연산\n",
+    "문자열끼리 연산도 할 수 있다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "560a272b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"Hello\"\n",
+    "b = \"World\"\n",
+    "\n",
+    "print(a + \" \" + b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "5e7e37ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "StringStringString\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"String\"\n",
+    "\n",
+    "print(a*3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "08385dd1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CD\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"ABCDEF\"\n",
+    "\n",
+    "print(a[2:4])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7cd9fd78",
+   "metadata": {},
+   "source": [
+    "### 튜플 자료형"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9689d455",
+   "metadata": {},
+   "source": [
+    "튜플의 값은 변경할 수 없다.<br>\n",
+    "튜플은 ()를 이용한다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "22424980",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 4)\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mC:\\Users\\ISAACB~1\\AppData\\Local\\Temp/ipykernel_15800/1539920695.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0ma\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m7\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "a = (1,2,3,4)\n",
+    "print(a)\n",
+    "\n",
+    "a[2] = 7"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "239f263c",
+   "metadata": {},
+   "source": [
+    "값을 변경하려 하면 오류가 생기는것을 확인 할 수 있다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f69eea4",
+   "metadata": {},
+   "source": [
+    "튜플은 \"그래프\" 를 구현할 때 자주 사용된다.<br>\n",
+    "다익스트라 최단거리 알고리즘에서 \"비용\"과 \"노드번호\"를 묶어서 사용하는것이 관례"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "943c30cb",
+   "metadata": {},
+   "source": [
+    "### 딕셔너리 자료형"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60bb6ba4",
+   "metadata": {},
+   "source": [
+    "딕셔너리 자료형은 키(key)와 값(value)를 쌍으로 갖는 자료형이다. <br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9d0ef1f",
+   "metadata": {},
+   "source": [
+    "<table align = \"left\">\n",
+    "    <th>키(Key)</th>\n",
+    "    <th>값(Value)</th>    \n",
+    "    <tr><!-- 첫줄-->\n",
+    "        <td>사과</td>    \n",
+    "        <td>Apple</td>\n",
+    "    </tr>\n",
+    "    <tr><!-- 둘째줄-->\n",
+    "        <td>바나나</td>\n",
+    "        <td>Banana</td>\n",
+    "    </tr>    \n",
+    "    <tr><!-- 셋째줄-->\n",
+    "        <td>코코넛</td>\n",
+    "        <td>Coconut</td>\n",
+    "    </tr>\n",
+    "    \n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae4d2c97",
+   "metadata": {},
+   "source": [
+    "파이썬의 딕셔너리 자료형은 내부적으로 해시테이블(Hash Table)을 이용하므로 기본적으로 $O(1)$의 시간에 처리할 수 있다. <br>\n",
+    "아무튼 리스트보다 빠름"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "3b395c42",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'사과': 'Apple', '바나나': 'Banana', '코코넛': 'Coconut'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = dict()\n",
+    "data['사과'] = 'Apple'\n",
+    "data['바나나'] = 'Banana'\n",
+    "data['코코넛'] = 'Coconut'\n",
+    "\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de4e5145",
+   "metadata": {},
+   "source": [
+    "딕셔너리 자료형에서는 \"원소 in 사전\"의 형태로 검색을 할 수 있다.<br>\n",
+    "참고로, 리스트나 튜플에서도 이런식의 검색이 가능하다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "061686f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'사과' in data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e24be2c4",
+   "metadata": {},
+   "source": [
+    "####  딕셔너리 관련 함수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "1d14f0b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['사과', '바나나', '코코넛'])\n",
+      "dict_values(['Apple', 'Banana', 'Coconut'])\n",
+      "----------\n",
+      "사과\n",
+      "바나나\n",
+      "코코넛\n",
+      "----------\n",
+      "Apple\n",
+      "Banana\n",
+      "Coconut\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = dict()\n",
+    "data['사과'] = 'Apple'\n",
+    "data['바나나'] = 'Banana'\n",
+    "data['코코넛'] = 'Coconut'\n",
+    "\n",
+    "#키 추출\n",
+    "key_list = data.keys()\n",
+    "#값 추출\n",
+    "value_list = data.values()\n",
+    "\n",
+    "print(key_list)\n",
+    "print(value_list)\n",
+    "print('----------')\n",
+    "\n",
+    "#각 키를 하나씩 출력\n",
+    "for key in key_list:\n",
+    "    print(key)\n",
+    "print('----------')\n",
+    "\n",
+    "#각 키에 따른 값을 하나씩 출력\n",
+    "for key in key_list:\n",
+    "    print(data[key])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab4404a8",
+   "metadata": {},
+   "source": [
+    "### 집합 자료형"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "927ddaaf",
+   "metadata": {},
+   "source": [
+    "파이썬에는 집합(set)를 처리하는 집합자료형이 있다.<br>\n",
+    "기본적으로 리스트, 문자열을 통해 만들 수 있다. 특징은 다음과 같다<br>\n",
+    "\n",
+    "- 중복을 허용하지 않는다\n",
+    "- 순서가 없다"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e8885eb",
+   "metadata": {},
+   "source": [
+    "집합은, 사전과 마찬가지로 검색할때 $O(1)$의 복잡도를 갖는다. (순서가 없기 때문)\n",
+    "초기화 할 때는 set() 함수나 { }를 통해 한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "fc03f66c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5}\n",
+      "{1, 2, 3, 4, 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = 1,1,2,3,4,4,5\n",
+    "\n",
+    "set1 = set(data)\n",
+    "print(set1)\n",
+    "\n",
+    "set2 = {1,1,2,3,4,4,5}\n",
+    "print(set2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b07ddd7",
+   "metadata": {},
+   "source": [
+    "### 집합의 연산"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "864e4232",
+   "metadata": {},
+   "source": [
+    "합집합 기호 : |<br>\n",
+    "교집합 기호 : &<br>\n",
+    "차집합 기호 : -<br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "e55b9d97",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5, 6, 7}\n",
+      "{3, 4, 5}\n",
+      "{1, 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = set([1,2,3,4,5])\n",
+    "b = set([3,4,5,6,7])\n",
+    "\n",
+    "print(a|b) #합집합\n",
+    "print(a&b) #교집합\n",
+    "print(a-b) #차집합"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8bbbf159",
+   "metadata": {},
+   "source": [
+    "#### 집합 관련 함수"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "edb46932",
+   "metadata": {},
+   "source": [
+    "원소 더하기 : add() <br>\n",
+    "원소 여러개 더하기 : update()<br>\n",
+    "값 제거하기 : remove()  # 하나씩만 가능"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "6cec0e53",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3}\n",
+      "{1, 2, 3, 4}\n",
+      "{1, 2, 3, 4, 5, 6}\n",
+      "{1, 2, 3, 4, 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = set([1,2,3])\n",
+    "print(data)\n",
+    "\n",
+    "data.add(4)\n",
+    "print(data)\n",
+    "\n",
+    "data.update([5,6])\n",
+    "print(data)\n",
+    "\n",
+    "data.remove(6)\n",
+    "print(data)"
+   ]
   }
  ],
  "metadata": {
