--- a/이것이_코딩_테스트다/01_당장_좋은것만_선택하는_그리디.ipynb
+++ b/이것이_코딩_테스트다/01_당장_좋은것만_선택하는_그리디.ipynb
@@ -119,7 +119,7 @@
    "id": "c515cacf",
    "metadata": {},
    "source": [
-    "## 실전문제/큰수의법칙"
+    "## <2>실전문제/큰수의법칙"
    ]
   },
   {
@@ -307,12 +307,265 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "449032f3",
+   "cell_type": "markdown",
+   "id": "ddca61ce",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## <3>숫자카드게임"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e79f7bb4",
+   "metadata": {},
+   "source": [
+    "여러개의 숫자 카드 중에서 가장 높은 숫자가 쓰인 카드 한장을 뽑는 게임.\n",
+    "\n",
+    " - 카드들은 N X M 의 형태로 되어있음. N: 행의개수, M:열의 개수\n",
+    " - 먼저 뽑고자 하는 카드가 포함돼있는 행을 선택\n",
+    " - 선택된 행에 포함된 카드들 중 가장 숫자가 낮은 카드를 뽑는다.\n",
+    " - 처음에 카드를 고를 행을 선택할 때, 이후에 해당 행에서 가장 숫자가 낮은 카드를 뽑을 것을 고려해 최종적으로 높은 카드 뽑을 수 있도록 전략 짜야함\n",
+    " \n",
+    " 예를들어, 3 X 3 형태로 다음과 같이 카드가 있다고 하자<br><br>\n",
+    " \n",
+    " [3,1,2]<br>\n",
+    " [4,1,4]<br>\n",
+    " [2,2,2]<br>\n",
+    " \n",
+    " 이때, 1번줄이나 2번줄을 고르면 1을 뽑는것이므로,<br>\n",
+    " 2를 출력해주는 3번줄을 골라야한다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "502080d4",
+   "metadata": {},
+   "source": [
+    "입력조건 : \n",
+    "- 첫째 줄에 숫자 카드들이 놓인 행의 개수 N과 열의 개수 M이 공백을 기준으로 하여 각각 자연수로 주어진다. (1 $ \\leq$ N,M $ \\leq $ 100)\n",
+    "- 둘째 줄부터 N개의 줄에 걸쳐 각 카드에 적힌 숫자가 주어진다. 각 숫자는 1 이상 10,000 이하의 자연수이다.\n",
+    "\n",
+    "출력조건 :\n",
+    "- 첫째 줄에 게임의 룰에 맞게 선택한 카드에 적힌 숫자를 출력한다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab136704",
+   "metadata": {},
+   "source": [
+    "입력예시1 :<br>\n",
+    "3 3<br>\n",
+    "3 1 2<br>\n",
+    "4 1 4<br>\n",
+    "2 2 2<br>\n",
+    "<br>\n",
+    "출력예시1:<br>\n",
+    "2\n",
+    "\n",
+    "입력예시2:<br>\n",
+    "2 4<br>\n",
+    "7 3 1 8<br>\n",
+    "3 3 3 4<br>\n",
+    "<br>\n",
+    "출력예시2:<br>\n",
+    "3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "31e43261",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 4\n",
+      "7 3 1 8\n",
+      "3 3 3 4\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#min 함수를 이용한 방법\n",
+    "\n",
+    "#N,M을 공백으로 구분해 입력받기\n",
+    "n,m = map(int,input().split())\n",
+    "\n",
+    "result =0\n",
+    "\n",
+    "for i in range(n):\n",
+    "    data = list(map(int,input().split()))\n",
+    "    #현재 줄에서 가장 작은 수 찾기\n",
+    "    min_value = min(data)\n",
+    "    #가장 작은 수 중에서 가장 큰 수 차기\n",
+    "    result = max(result,min_value)\n",
+    "    \n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "70edcc59",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 4\n",
+      "7 3 1 8\n",
+      "3 3 3 4\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#2중 반복문 구조를 통한 예시\n",
+    "\n",
+    "#N,M 공백으로 구분해 입력받기\n",
+    "n,m = map(int,input().split())\n",
+    "\n",
+    "result = 0\n",
+    "#한줄씩 입력\n",
+    "for i in range(n):\n",
+    "    data = list(map(int,input().split()))\n",
+    "    #현재 줄에서 가장 작은 수 찾기\n",
+    "    min_value = 10001\n",
+    "    for a in data:\n",
+    "        min_value = min(min_value,a)\n",
+    "        \n",
+    "    #가장 작은 수들 중에서 가장 큰 수 찾기\n",
+    "    result = max(result,min_value)\n",
+    "    \n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea27a60b",
+   "metadata": {},
+   "source": [
+    "## <4> 1이 될 때 까지"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d153d427",
+   "metadata": {},
+   "source": [
+    "어떤 수 N이 1이 될 때 까지 다음 과정을 반복한다. N이 K로 나눠지면 2를 선택한다.\n",
+    "1. N에서 1을 뺀다\n",
+    "2. N을 K로 나눈다"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c26d906",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "ex) N = 17, K = 4\n",
+    "- 첫번째 수행 : 16\n",
+    "- 두번째 수행 : 4\n",
+    "- 세번째 수행 : 1<br><br>\n",
+    "N=17,K=4일때 해답은 3이다\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46708b95",
+   "metadata": {},
+   "source": [
+    "입력조건 : \n",
+    "- 첫째 줄에  N(2 $\\leq$N$\\leq$ 100,000)과 K(2 $\\leq$ K $\\leq$ 100,000)가 공백으로 구분되며 각각 자연수로 주어짐. N은 K보다 크거나 같음\n",
+    "\n",
+    "출력조건 :\n",
+    "- 첫째 줄에 N이 1이 될 때까지 1번 혹은 2번의 과정을 구행햐아 하는 횟수의 최솟값을 출력\n",
+    "\n",
+    "입력 예시 :\n",
+    "25 5<br>\n",
+    "출력 예시 :\n",
+    "2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "dbafbfd8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40 7\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "n,k = map(int,input().split())\n",
+    "result = 0\n",
+    "\n",
+    "#N이 K이상이면 K로 계속 나누기\n",
+    "while n>= k:\n",
+    "    #n이 k로 안나눠지면 1씩 빼기\n",
+    "    while n%k != 0:\n",
+    "        n -= 1\n",
+    "        result += 1\n",
+    "    #k로 나누기\n",
+    "    n //= k\n",
+    "    result += 1\n",
+    "    #이 과정이 다 끝나면 n이 k보다 작아짐\n",
+    "    \n",
+    "while n>1:\n",
+    "    n -= 1\n",
+    "    result += 1\n",
+    "    \n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f28801ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100000000 9\n",
+      "39\n"
+     ]
+    }
+   ],
+   "source": [
+    "n,k = map(int,input().split())\n",
+    "result = 0\n",
+    "\n",
+    "while True:\n",
+    "    #(N==K로 나누어 떨어지는 수)가 될때까지 1 씩 빼기\n",
+    "    target = (n//k) * k\n",
+    "    result += (n- target)\n",
+    "    n = target\n",
+    "    #N이 K보다 작을 때(더 이상 나눌 수 없을 때) 반복문 탈출\n",
+    "    if n<k:\n",
+    "        break\n",
+    "    #K로 나누기\n",
+    "    result += 1\n",
+    "    n //= k\n",
+    "    \n",
+    "#마지막 남은 수 1씩 빼기\n",
+    "result += (n-1)\n",
+    "print(result)"
+   ]
   }
  ],
  "metadata": {
